--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "react-navigation-material-bottom-tabs",
   "version": "0.4.0",
   "description": "Material Bottom Tab Navigation component for React Navigation",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "files": [
-    "dist/"
+    "src/"
   ],
   "scripts": {
     "test": "jest",
